--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rwillett",
   "private": true,
-  "homepage": "ryanjwillett.com",
+  "homepage": "https://rwillett9.github.io",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
